Fix: Changed some css
Updated looks

--- a/imports/ui/dossier_components/dossiersList/web.html
+++ b/imports/ui/dossier_components/dossiersList/web.html
@@ -21,7 +21,7 @@
   </div>
 
   <div layout="column" layout-gt-sm="row" class='datagrid'>
-    <table>
+    <table class="table table-striped">
       <thead></thead>
       <tbody>
         <tr >
