--- a/imports/ui/event_components/eventRemove/eventRemove.html
+++ b/imports/ui/event_components/eventRemove/eventRemove.html
@@ -1,1 +1,1 @@
-<md-icon md-svg-icon="content:ic_clear_24px" ng-click="eventRemove.remove()"></md-icon>
+<md-button ng-click="eventRemove.remove()" style="background-color:red" class="md-primary md-raised"> Delete </md-button>
