--- a/imports/ui/dossier_components/dossierRemove/dossierRemove.html
+++ b/imports/ui/dossier_components/dossierRemove/dossierRemove.html
@@ -1,1 +1,2 @@
-<md-icon md-svg-icon="content:ic_clear_24px" ng-click="dossierRemove.remove()"></md-icon>
+<md-button ng-click="dossierRemove.remove()" style="background-color:red" class="md-primary md-raised"> Delete </md-button>
+
