--- a/imports/ui/splash_components/splashIndex/web.html
+++ b/imports/ui/splash_components/splashIndex/web.html
@@ -36,7 +36,6 @@
     <div class="row">
       <div class="section-title text-center center wow fadeInDown">
         <h2>About us</h2>
-        <hr>
       </div>
       <div class="row wow fadeInDown" data-wow-delay="200ms">
         <div class="col-md-6"> <img src="img/about.jpg" class="img-about" style="margin-top:-20px;"><img src="img/about1.jpg" class="img-about"><img src="img/about2.jpg" class="img-about"> </div>
@@ -95,6 +94,7 @@
   </div>
 </div>
 <!-- Portfolio Section -->
+<div class="spacer" style="height: 50px;"></div>
 <div id="portfolio-section">
   <div class="container">
     <div class="section-title text-center wow fadeInDown">
@@ -173,10 +173,12 @@
     </div>
   </div>
 </div>
+<div class="spacer" style="height: 50px;"></div>
 <!-- Donation Section -->
 <div id="donation-section" class="text-center">
+<div class="spacer" style="height: 100px;"></div>
   <div class="container" style="font-weight:300;font-size:20px">
-    <h1 id="heroesOnTheWater-heading15" style="color:blue" class=" ">Donate</h1>
+    <h2 style="color:blue">Donate</h2>
         <form id="heroesOnTheWater-form1" class="list ">
             
             <md-input-container>
@@ -209,6 +211,7 @@
 
         </form>
   </div>
+  <div class="spacer" style="height: 100px;"></div>
 </div>
 
 <!-- Contact Section -->
@@ -216,7 +219,6 @@
   <div class="container">
     <div class="section-title text-center wow fadeInDown">
       <h2>Contact us</h2>
-      <hr>
       <div class="clearfix"></div>
     </div>
     <div class="col-md-4 wow fadeInDown" data-wow-delay="200ms">
