--- a/imports/ui/event_components/eventsMap/eventsMap.html
+++ b/imports/ui/event_components/eventsMap/eventsMap.html
@@ -1,5 +1,7 @@
 <div class="angular-google-map-container">
-  <ui-gmap-google-map center="eventsMap.map.center" zoom="eventsMap.map.zoom">
+  <ui-gmap-google-map center="eventsMap.map.center" zoom="eventsMap.map.zoom" options="eventsMap.map.options">
     <ui-gmap-markers models="eventsMap.events" coords="'location'" fit="true" idkey="'_id'" doRebuildAll="true"></ui-gmap-markers>
   </ui-gmap-google-map>
 </div>
+
+
