--- a/imports/ui/inventory_components/inventoryRemove/inventoryRemove.html
+++ b/imports/ui/inventory_components/inventoryRemove/inventoryRemove.html
@@ -1,1 +1,2 @@
-<md-icon md-svg-icon="content:ic_clear_24px" ng-click="inventoryRemove.remove()"></md-icon>
+<md-button ng-click="inventoryRemove.remove()" style="background-color:red" class="md-primary md-raised"> Delete </md-button>
+
