--- a/imports/ui/splash_components/splashIndex/web.html
+++ b/imports/ui/splash_components/splashIndex/web.html
@@ -12,9 +12,10 @@
         <li><a href="/splash" class="page-scroll">Home</a></li>
         <li><a href="#about-section" class="page-scroll">About</a></li>
         <li><a href="#events-section" class="page-scroll">Events</a></li>
-        <li><a ng-show="splashIndex.isAuthorized()" href='http://localhost:3000/splash/admin'>Admin</a></li>
+        <li><a href="#portfolio-section" class="page-scroll">Portfolio</a></li>
         <li><a href="#donation-section" class="page-scroll">Donate</a></li>
         <li><a href="#contact-section" class="page-scroll">Contact</a></li>
+        <li><a ng-show="splashIndex.isAuthorized()" href='http://localhost:3000/splash/admin'>Admin</a></li>
       </ul>
     </div> 
   </div>
