QuickFix: Minor css
button color changes, new photos…

--- a/imports/ui/event_components/eventAddButton/eventAddButton.html
+++ b/imports/ui/event_components/eventAddButton/eventAddButton.html
@@ -1,3 +1,3 @@
-<md-button class="md-fab" style="background-color:blue" aria-label="Add new event" ng-click="eventAddButton.open($event)">
+<md-button class="md-fab" style="background-color:green" aria-label="Add new event" ng-click="eventAddButton.open($event)">
   <md-icon md-svg-icon="content:ic_add_24px"></md-icon>
 </md-button>
