--- a/imports/ui/event_components/eventAlert/eventAlert.html
+++ b/imports/ui/event_components/eventAlert/eventAlert.html
@@ -18,7 +18,7 @@
     <textarea ng-model='eventAlert.message' required md-maxlength='140' rows='5'></textarea>
   </md-input-container>
 
-  <md-button ng-click="eventAlert.send()"  style="background-color:yellow" class="md-primary md-raised"> Send </md-button>
+  <md-button ng-click="eventAlert.send()" class="md-primary md-raised"> Send </md-button>
 
 
 </div>
