--- a/imports/ui/splash_components/splashIndex/web.html
+++ b/imports/ui/splash_components/splashIndex/web.html
@@ -115,17 +115,6 @@
               <img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
-          <div class="portfolio-item wow fadeInDown" data-wow-delay="400ms">
-            <div class="hover-bg"> <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-              <div class="hover-text">
-                <h4>Josh</h4>
-                <p>There’s no pressure to do anything but relax and enjoy nature</p>
-                <div class="clearfix"></div>
-              </div>
-              <img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item wow fadeInDown" data-wow-delay="600ms">
             <div class="hover-bg"> <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
@@ -135,6 +124,17 @@
                 <div class="clearfix"></div>
               </div>
               <img src="img/portfolio/03.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 app">
+          <div class="portfolio-item wow fadeInDown" data-wow-delay="400ms">
+            <div class="hover-bg"> <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+              <div class="hover-text">
+                <h4>Josh</h4>
+                <p>There’s no pressure to do anything but relax and enjoy nature</p>
+                <div class="clearfix"></div>
+              </div>
+              <img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -159,6 +159,17 @@
               <img src="img/portfolio/05.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 app">
+          <div class="portfolio-item wow fadeInDown" data-wow-delay="1000ms">
+            <div class="hover-bg"> <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+              <div class="hover-text">
+                <h4>Relaxing on the water</h4>
+                <p>Youtube</p>
+                <div class="clearfix"></div>
+              </div>
+              <img src="img/portfolio/08.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding">
           <div class="portfolio-item wow fadeInDown" data-wow-delay="1200ms">
             <div class="hover-bg"> <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
@@ -170,6 +181,17 @@
               <img src="img/portfolio/06.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 app">
+          <div class="portfolio-item wow fadeInDown" data-wow-delay="1000ms">
+            <div class="hover-bg"> <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+              <div class="hover-text">
+                <h4>Jason Austin Heroes on the Water</h4>
+                <p>YouTube</p>
+                <div class="clearfix"></div>
+              </div>
+              <img src="img/portfolio/07.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -179,35 +201,35 @@
 <div id="donation-section" class="text-center">
 <div class="spacer" style="height: 100px;"></div>
   <div class="container" style="font-weight:300;font-size:20px">
-    <h2 style="color:blue">Donate</h2>
+    <h2 style="color:red">Donate</h2>
         <form id="heroesOnTheWater-form1" class="list ">
             
             <md-input-container>
-                <label style="color:blue">
+                <label style="color:red">
                 Your Name:
                 </label>
                 <input type="text" ng-model="splashIndex.donations.name"/>
             </md-input-container>
             <md-input-container>
-                <label style="color:blue">
+                <label style="color:red">
                 Organization:
                 </label>
                 <input type="text" ng-model="splashIndex.donations.organization"/>
             </md-input-container>
             <md-input-container>
-                <label style="color:blue">
+                <label style="color:red">
                 Contact:
-                </label style="color:blue">
+                </label style="color:red">
                 <input type="text" ng-model="splashIndex.donations.contact"/>
             </md-input-container>
             <md-input-container>
-                <label style="color:blue">
+                <label style="color:red">
                 Amount:
                 </label>
                 <input type="text" ng-model="splashIndex.donations.amount"/>
             </md-input-container>
                 
-            <md-button style="color:blue" ng-click="splashIndex.donate()" class="md-raised">Donate!</md-button>
+            <md-button style="color:red" ng-click="splashIndex.donate()" class="md-raised">Donate!</md-button>
 
 
         </form>
@@ -225,12 +247,12 @@
     <div class="col-md-4 wow fadeInDown" data-wow-delay="200ms">
       <h3>Contact Info</h3>
       <div class="space"></div>
-      <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>321 Awesome Street<br>
-        New York, NY 17022</p>
+      <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>101-C N. Greenville Ave. #55<br>
+        Allen, TX 75002</p>
       <div class="space"></div>
-      <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@companyname.com</p>
+      <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@heroesonthewater.org</p>
       <div class="space"></div>
-      <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+1 800 123 1234</p>
+      <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+1 214 295 4541</p>
     </div>
     <div class="col-md-8 wow fadeInDown" data-wow-delay="200ms">
       <h3>Leave us a message</h3>
@@ -438,6 +460,52 @@
             <p>If you are interested in helping a warrior begin the journey toward peace, you can do so by donating, volunteering, or starting a chapter in your area!</p>
 
             <p>The chapter leaders, volunteers and community continue to show how committed they are about helping Heroes on the Water serve warriors in building a more peaceful, fulfilling life at home. Our sincere thanks to all those who serve our warriors!</p>
+            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Portfolio Modal 7 -->
+<div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-content">
+    <div class="close-modal" data-dismiss="modal">
+      <div class="lr">
+        <div class="rl"> </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="modal-body"> 
+            <h2>Jason Austin Heroes on the Water</h2>
+            <div style="position:relative;overflow:hidden;padding-bottom:56.25%;height:0;" id="heroesOnTheWater-video1" class=" ">
+              <iframe width="854" height="480" src="https://www.youtube.com/embed/XXeuktMNjY8" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Portfolio Modal 8 -->
+<div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-content">
+    <div class="close-modal" data-dismiss="modal">
+      <div class="lr">
+        <div class="rl"> </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="modal-body"> 
+            <h2>Watch 13 Year Air Force Veteran Jim Dolan Founder of Heroes On The Water</h2>
+            <div style="position:relative;overflow:hidden;padding-bottom:56.25%;height:0;" id="heroesOnTheWater-video1" class=" ">
+              <iframe width="854" height="480" src="https://www.youtube.com/embed/Mz_0mMKw5oE" frameborder="0" allowfullscreen></iframe>
+            </div>
             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
           </div>
         </div>
