--- a/imports/ui/splash_components/splashIndex/web.html
+++ b/imports/ui/splash_components/splashIndex/web.html
@@ -15,7 +15,7 @@
         <li><a href="#portfolio-section" class="page-scroll">Portfolio</a></li>
         <li><a href="#donation-section" class="page-scroll">Donate</a></li>
         <li><a href="#contact-section" class="page-scroll">Contact</a></li>
-        <li><a ng-show="splashIndex.isAuthorized()" href='http://localhost:3000/splash/admin'>Admin</a></li>
+        <li><a ng-show="splashIndex.isAuthorized()" href='/splash/admin'>Admin</a></li>
       </ul>
     </div> 
   </div>
